create and search controller done with test pages

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,7 +1,8 @@
-
 <div>
-    <div ng-model="searchData"> hello </div>
-    <button ng-click="search()"> </button>
+    <input ng-model="searchData.price"> 
+    <input ng-model="searchData.duration"> 
+    <button ng-click="search(searchData)"> Search </button>
+    
 </div>
 
 
