--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,20 +1,14 @@
 
 <h1 class='log_in_header'>Log In</h1>
-  <form class='log_in_boxes'>
-    Username:<input type="text" >
-    Password:<input type="text" >
+  <form class='log_in_boxes' ng-submit="login(user)">
+    Email:<input type="text" ng-model="user.email">
+    Password:<input type="text" ng-model="user.password">
     <button class='default' type='submit'>Log In</button>
   </form>
   <h1 class='log_in_header'>Register</h1>
   <form class='log_in_boxes'>
-    Username:<input type="text" >
-    Password:<input type="text" >
-    First Name:<input type="text" >
-    Last Name:<input type="text" >
-    <p>Birthdate</p>
-    Month:<input type="text" >
-    Day:<input type="text" >
-    Year:<input type="text" >
+    Email:<input type="text" ng-model="user.email" >
+    Password:<input type="text" ng-model="user.password">
     <button class='default' type='submit'>Register</button>
   </form>
 <style>
