--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -5,12 +5,14 @@
     Password:<input type="text" ng-model="user.password">
     <button class='default' type='submit'>Log In</button>
   </form>
+ <div>{{loginerrors}}</div>
   <h1 class='log_in_header'>Register</h1>
-  <form class='log_in_boxes'>
-    Email:<input type="text" ng-model="user.email" >
-    Password:<input type="text" ng-model="user.password">
+  <form class='log_in_boxes' ng-submit="register(new)">
+    Email:<input type="text" ng-model="new.email" >
+    Password:<input type="text" ng-model="new.password">
     <button class='default' type='submit'>Register</button>
   </form>
+  <div>{{registererrors}}</div>
 <style>
 .log_in_boxes{
   padding:2%;
