--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,6 +1,6 @@
 <div>
     <input ng-model="searchData.price"> 
-    <input ng-model="searchData.duration"> 
+    <input ng-model="searchData.zip"> 
     <button ng-click="search(searchData)"> Search </button>
     
 </div>
