--- a/client/partials/search.html
+++ b/client/partials/search.html
@@ -38,7 +38,7 @@
 <div class="listings">
     <table>
         <tr ng-repeat="item in listings">
-            <th style="align:left; padding:2%">{{item.picture}}</th>
+            <th style="align:left; padding:2%"> (picture) </th>
             <th style="align:left; padding:2%">
                 Price: {{item.price}}<br>
                 Address: {{item.address1}}<br>
