--- a/client/partials/search.html
+++ b/client/partials/search.html
@@ -1,10 +1,50 @@
-<div>
-    <div ng-model="searchData.price"> hello </div>
-    <input ng-model="searchData.zip"> 
-    <button ng-click="search(searchData)"> Search </button>
-    <div ng-repeat="item in listings"> 
-        <a href="#/search/{{item.id}}" ng-click="storeItem(item)">{{item.name}}</a>
-    </div>
-    <button ng-click="changeToNew()"> Go to new </button>
+
+  <style>
+ header {background: darkseagreen;color: white; width: 100%; margin: 0%}
+  </style>
+  <h1 style="text-align:center;padding:2%;">&hearts; Subletter &hearts;</h1>
+</header>
+
+<body>
+  <h2><i>Listings</i></h2>
+
+<style>
+  .listings {
+  background: mintcream;
+  border: 5px solid darkseagreen;
+  border-radius: 10px;
+  }
+</style>
+
+
+<div class="listings">
+<style>
+table {
+    border-collapse: collapse; color: opacity;
+}
+
+table, td, th {
+    border: 1px solid opacity;
+}
+</style>
+</head>
+
+<body>
+<table>
+  <tr>
+    <th style="align:left; padding:2%">(insert picture)
+</th>
+    <th style="align:left; padding:2%">
+Price: <br>
+Address: <br>
+</th>
+  </tr>
+</table>
 </div>
+
+
+</div>
+
+
+
 
