--- a/client/partials/create.html
+++ b/client/partials/create.html
@@ -79,12 +79,13 @@ Phone:<br>
 <input type="checkbox" ng-model="post.fridge" ng-true-value="true" ng-false-value="false">Fridge<br>
 <input type="checkbox" ng-model="post.parking" ng-true-value="true" ng-false-value="false">Parking<br>
 <input type="checkbox" ng-model="post.washer" ng-true-value="true" ng-false-value="false">Washer<br>
-Move In Date<input type="date" ng-model="movein"><br>
-Move Out Date<input type="date" ng-model="moveout">
+Move In Date<input type="date" ng-model="post.movein"><br>
+Move Out Date<input type="date" ng-model="post.moveout">
 <br><br>
 
+Price:<input type="text" ng-model="post.price"><br>
 
-
+Guests:<input type="text" ng-model="post.guests"><br>
 
 <b>Short Description: </b><br><textarea name="description" value="about your space..." rows="50" cols="50" ng-model="post.description"><br><br></textarea>
 
