--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -139,8 +139,8 @@ padding-left:5em;
         <div>
           <div><label>Zipcode:<input type="text" name="Zipcode" ng-model="query.zip"></label></div>
           <div><label>Price:<input type="text" name="Price" ng-model="query.price"></label><br></div>
-          <div><label>Move-in Date:<input type="datetime-local" name="moveIn" ng-model="query.moveIn"></label></div>
-          <div><label>Move-Out Date: <input type="datetime-local" name="query.moveOut"></label></div><br>
+          <div><label>Move-in Date:<input type="date" name="moveIn" ng-model="query.moveIn"></label></div>
+          <div><label>Move-Out Date: <input type="date" name="query.moveOut"></label></div><br>
           <div><button class="submitButton" type="submit" value="Submit" text-align="right">Search</button></div>
         </div>
       </form>
