--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -29,7 +29,7 @@
   justify-content:center;
   align-content: space-around;
   align-items: center;
-  font-family: "Baskerville W01 Regular_705699"
+  font-family: "Baskerville W01 Regular_705699";
   font-size: 20px;
   width: 75%;
   height:100%;
@@ -141,7 +141,7 @@ padding-left:5em;
           <div><label>Price:<input type="text" name="Price" ng-model="query.price"></label><br></div>
           <div><label>Move-in Date:<input type="date" name="moveIn" ng-model="query.moveIn"></label></div>
           <div><label>Move-Out Date: <input type="date" name="query.moveOut"></label></div><br>
-          <div><button class="submitButton" type="submit" value="Submit" text-align="right">Search</button></div>
+          <div><button class="submitButton" type="submit" value="Submit">Search</button></div>
         </div>
       </form>
     </div>
